# cuvista

./: .gitignore  .gitmodules  CMakeLists.txt  Deshaker.sln  Deshaker.sln.nvsettings  Notes.md  README.md  deployfiles.txt  nvvp 11.8 - Verknüpfung.lnk
AvxStuff/: AvxFrame.cpp  AvxFrame.hpp  AvxMat.hpp  AvxStuff.vcxproj  AvxStuff.vcxproj.filters  AvxUtil.cpp  AvxUtil.hpp  AvxWrapper.cpp  AvxWrapper.hpp  CMakeLists.txt
Common/: AffineCore.hpp  AffineData.hpp  BaseData.cpp  BaseData.hpp  CMakeLists.txt  CharMap.hpp  Color.cpp  Color.hpp  Common.vcxproj  Common.vcxproj.filters  CoreData.cpp  CoreData.hpp  DeviceInfo.hpp  DeviceInfoBase.hpp  ErrorLogger.cpp  ErrorLogger.hpp  FrameExecutor.hpp  Image.cpp  Image.hpp  Image2.cpp  Image2.hpp  ImageBase.hpp  ImageClasses.cpp  ImageClasses.hpp  ImageColor.hpp  ImageData.hpp  ImageHeaders.cpp  ImageHeaders.hpp  ImageInterface.hpp  ImagePixel.cpp  ImageStore.hpp  ImageType.hpp  ImageUtil.hpp  OutputOption.cpp  OutputOption.hpp  ThreadPoolBase.cpp  ThreadPoolBase.h  Util.cpp  Util.hpp
CudaClasses/: CMakeLists.txt  CoreData.cpp  CoreData.cu  CoreData.cuh  CoreData.hpp  CudaClasses.rc  CudaClasses.vcxproj  CudaClasses.vcxproj.filters  CudaData.cu  CudaData.cuh  CudaInfo.cpp  CudaInfo.hpp  DeviceInfo.hpp  DeviceInfoCuda.cuh  ErrorLogger.hpp  cuDecompose.cu  cuDecompose.cuh  cuDeshaker.cu  cuDeshaker.cuh  cuFilterKernel.cuh  cuKernelCompute.cu  cuNPP.cu  cuNPP.cuh  cuTest.cu  cuTest.cuh  cuUtil.cu  cuUtil.cuh  resource.h
CudaStuff/: CMakeLists.txt  CudaClasses.vcxproj  CudaClasses.vcxproj.filters  CudaData.cuh  CudaStuff.vcxproj  DeviceInfoCuda.cuh  cuDecompose.cu  cuDeshaker.cu  cuDeshaker.cuh  cuInterface.cuh  cuKernelCompute.cu  cuKernels.cu  cuKernels.cuh  cuNPP.cu  cuNPP.cuh  cuTest.cu  cuTest.cuh  cuUtil.cu  cuUtil.cuh  resource.h
CuvistaInstaller/: AppComponents.wxs  CuvistaInstaller.wixproj  Folders.wxs  Package.en-us.wxl  Package.wxs
Deshaker/: AVException.hpp  AffineTransform.cpp  AffineTransform.hpp  AudioDecoder.cpp  AudioDecoder.hpp  AuxiliaryWriter.cpp  AuxiliaryWriter.hpp  AvxFrame.cpp  AvxFrame.hpp  AvxMat.hpp  AvxUtil.cpp  AvxUtil.hpp  AvxWrapper.hpp  CMakeLists.txt  CombinerWriter.cpp  CpuFrame.cpp  CpuFrame.hpp  CudaFrame.cpp  CudaFrame.hpp  CudaInterface.hpp  CudaWriter.cpp  CudaWriter.hpp  DebugLogger.cpp  Deshaker.cpp  Deshaker.hpp  Deshaker.vcxproj  Deshaker.vcxproj.filters  DeshakerHelpText.hpp  DeshakerLoop.cpp  DeviceInfo.cpp  DeviceInfo.hpp  DeviceInfoCpu.cpp  DeviceInfoCpu.hpp  Diagnostics.cpp  Diagnostics.hpp  DummyFrame.cpp  DummyFrame.hpp  FFmpeg.cpp  FFmpeg.hpp  FFmpegFormatWriter.cpp  (+71 more)
Matrix/: Affine2D.cpp  Affine2D.h  Affine2D.hpp  CMakeLists.txt  CharMap.hpp  CholeskyDecompositor.h  CholeskyDecompositor.hpp  Color.cpp  Color.hpp  CoreMat.cpp  CoreMat.h  CoreMat.hpp  Decompositor.h  Decompositor.hpp  Image.cpp  Image.hpp  Image2.cpp  Image2.hpp  ImageSub.cpp  ImageUtil.cpp  ImageUtil.hpp  LUDecompositor.h  LUDecompositor.hpp  Mat.h  Mat.hpp  MatInverter.h  MatInverter.hpp  MatIterator.h  MatIterator.hpp  Matrix.vcxproj  Matrix.vcxproj.filters  OutputLine.hpp  QRDecompositor.h  QRDecompositor.hpp  QRDecompositorUD.h  QRDecompositorUD.hpp  SVDecompositor.h  SVDecompositor.hpp  SubMat.h  SubMat.hpp  (+3 more)
TestConsole/: MatrixTestMain.vcxproj.filters  TestAvx.cpp  TestConsole.vcxproj  TestCuda.cpp  TestFiltering.cpp  TestFrames.cpp  TestMain.cpp  TestMain.hpp  TestMatPerformance.cpp  TestMatrix.cpp  TestMisc.cpp  TestOpenCl.cpp  TestResults.cpp  TextAvx.cpp
TestCppUnit/: AvxTest.cpp  CodecTest.cpp  CompareCpuGpu.cpp  CompareFrames.cpp  DecompositionTest.cpp  MathTest.cpp  MatrixTest.cpp  MatrixTest.vcxproj  MatrixTest.vcxproj.filters  Utils.hpp  UtilsTest.cpp
TestCuvista/: Main.cpp  TestCuvista.vcxproj
TestRelease/: Main.cpp  TestRelease.vcxproj
cuvista/: Main.cpp  cuvista.rc  cuvista.vcxproj  cuvista.vcxproj.filters  resource.h
cuvistaCli/: CMakeIcon.rc  CMakeLists.txt  Deshaker.cpp  Deshaker.hpp  Main.cpp  cuvista.vcxproj  cuvista.vcxproj.filters
cuvistaFFmpeg/: CMakeLists.txt  CudaWriter.cpp  FFmpegFormatWriter.cpp  FFmpegMain.cpp  FFmpegMain.hpp  FFmpegWriter.cpp  Reader.cpp  Reader.hpp  StackedWriter.cpp  Writer.cpp  Writer.hpp  cuvistaFFmpeg.vcxproj  cuvistaFFmpeg.vcxproj.filters
cuvistaGui/: CMakeLists.txt  ClickLabel.cpp  ClickLabel.h  CustomImageLabel.cpp  CustomImageLabel.h  CustomTextEdit.cpp  CustomTextEdit.h  DoubleClickSlider.cpp  DoubleClickSlider.h  Eula.cpp  Eula.h  ImageLabel.cpp  ImageLabel.h  MessagePrinterGui.cpp  MessagePrinterGui.h  PlayerBufferDevice.cpp  PlayerBufferDevice.h  PlayerWidget.cpp  PlayerWidget.h  ProgressDisplayGui.cpp  ProgressDisplayGui.hpp  StabilizerThread.cpp  StabilizerThread.hpp  UserInputGui.cpp  UserInputGui.hpp  cuvistaGui.cpp  cuvistaGui.h  cuvistaGui.qrc  cuvistaGui.rc  cuvistaGui.ui  cuvistaGui.vcxproj  cuvistaGui.vcxproj.filters  eula.ui  main.cpp  player.cpp  player.h  player.ui  progress.cpp  progress.h  progress.ui
cuvistaWinui/: App.xaml  App.xaml.cpp  App.xaml.h  AppImage.cpp  AppImage.hpp  AppUtil.cpp  AppUtil.hpp  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  app.manifest  cuvistaWinui.vcxproj  cuvistaWinui.vcxproj.filters  packages.config  pch.cpp  pch.h
docs/: README.md  _config.yml  index.html  script.js  style.css
dump/: Cluster.cpp  FrameResult.cpp  Image.cpp  Image.hpp  Image2.cpp  ImageYuvFFmpeg.cpp  MatrixInverter.cpp  PlayerWidget.cpp  PlayerWidget.h  TcpWriter.cpp  Test.cpp  WinuiPicker.cpp  avx.cpp
include/: nvEncodeAPI.h  nvml.h
include/Cherno_/: Instrumentor.h
lib/x64/: cpu_features.lib
webpage/: index.html  style.css
