#project(Deshaker)

file(GLOB_RECURSE sources CONFIGURE_DEPENDS "*.cpp")
add_library(Deshaker STATIC ${sources})
target_include_directories(Deshaker PUBLIC "${PROJECT_SOURCE_DIR}/Common")
target_include_directories(Deshaker PUBLIC "${PROJECT_SOURCE_DIR}/Matrix")
target_include_directories(Deshaker PUBLIC "${PROJECT_SOURCE_DIR}/CudaStuff")
target_include_directories(Deshaker PUBLIC "${PROJECT_SOURCE_DIR}/AvxStuff")
target_include_directories(Deshaker PUBLIC "${PROJECT_SOURCE_DIR}/OpenCL-CLHPP/include")
target_include_directories(Deshaker PUBLIC "${PROJECT_SOURCE_DIR}/OpenCL-Headers")
target_include_directories(Deshaker PUBLIC "${PROJECT_SOURCE_DIR}/include")
target_include_directories(Deshaker PUBLIC "${PROJECT_SOURCE_DIR}/cpu_features/include")

target_link_libraries(Deshaker PUBLIC Common)
target_link_libraries(Deshaker PUBLIC Matrix)
target_link_libraries(Deshaker PUBLIC CpuFeatures::cpu_features)
target_link_libraries(Deshaker PUBLIC CudaStuff)
target_link_libraries(Deshaker PUBLIC AvxStuff)
